// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrainingTab should render 1`] = `
<div>
  <div
    class="makeStyles-tableWrapper-334"
  >
    <div
      class="makeStyles-filterActionsContainer-345 makeStyles-filterActionsContainerPadding-347"
    >
      <div
        class="MuiBox-root MuiBox-root-400 makeStyles-filterStatusContainer-348"
      >
        <div
          class="MuiBox-root MuiBox-root-401 makeStyles-filterStatusContainer-348 makeStyles-autocompleteFilterStatus-365"
        >
          <div
            class="makeStyles-floatingFilterWrapper-354 makeStyles-filterWrapper-353 makeStyles-buttonContainer-403 floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-355"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-363"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Projects
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-357"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <table
      aria-label="device-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Type
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Date
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trainer
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trainer Badge Code
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Project
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-407"
          data-testid="training-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            test training
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            May 19, 2020
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Alfred Henry
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            TD 18 NG
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="Link-root-408"
              href="/projects/detail/9164e4c4-6521-47bb-97fd-c75ac02b2cf2"
              title="View Project detail"
            >
              Project Name
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="update-delete-cell"
          />
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-409"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`TrainingTab should render detail loading 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="makeStyles-tableWrapper-724"
  >
    <div
      class="makeStyles-filterActionsContainer-735 makeStyles-filterActionsContainerPadding-737"
    >
      <div
        class="MuiBox-root MuiBox-root-790 makeStyles-filterStatusContainer-738"
      >
        <div
          class="MuiBox-root MuiBox-root-791 makeStyles-filterStatusContainer-738 makeStyles-autocompleteFilterStatus-755"
        >
          <div
            class="makeStyles-floatingFilterWrapper-744 makeStyles-filterWrapper-743 makeStyles-buttonContainer-793 floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-745"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-753"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Projects
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-747"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <table
      aria-label="device-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Type
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Date
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trainer
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trainer Badge Code
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Project
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-797"
          data-testid="training-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            test training
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            May 19, 2020
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Alfred Henry
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            TD 18 NG
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="Link-root-798"
              href="/projects/detail/9164e4c4-6521-47bb-97fd-c75ac02b2cf2"
              title="View Project detail"
            >
              Project Name
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="update-delete-cell"
          />
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-799"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`TrainingTab should render loading 1`] = `
<div>
  <div
    class="makeStyles-tableWrapper-596"
  >
    <div
      class="makeStyles-filterActionsContainer-607 makeStyles-filterActionsContainerPadding-609"
    >
      <div
        class="MuiBox-root MuiBox-root-662 makeStyles-filterStatusContainer-610"
      >
        <div
          class="MuiBox-root MuiBox-root-663 makeStyles-filterStatusContainer-610 makeStyles-autocompleteFilterStatus-627"
        >
          <div
            class="makeStyles-floatingFilterWrapper-616 makeStyles-filterWrapper-615 makeStyles-buttonContainer-665 floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-617"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-625"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Projects
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-619"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    Loading...
  </div>
</div>
`;

exports[`TrainingTab should render with secondary values 1`] = `
<div>
  <div
    class="makeStyles-tableWrapper-465"
  >
    <div
      class="makeStyles-filterActionsContainer-476 makeStyles-filterActionsContainerPadding-478"
    >
      <div
        class="MuiBox-root MuiBox-root-531 makeStyles-filterStatusContainer-479"
      >
        <div
          class="MuiBox-root MuiBox-root-532 makeStyles-filterStatusContainer-479 makeStyles-autocompleteFilterStatus-496"
        >
          <div
            class="makeStyles-floatingFilterWrapper-485 makeStyles-filterWrapper-484 makeStyles-buttonContainer-534 floatingFilterWrapper"
          >
            <span
              class="makeStyles-floatingFilterButton-486"
              data-testid="controlled-button"
              tabindex="-1"
            >
              <button
                aria-controls="false"
                aria-haspopup="true"
                class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-494"
                data-testid="button-filter-open"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  All Projects
                  <span
                    class="MuiButton-endIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      class="makeStyles-dropdownIcon-488"
                    >
                      expand.svg
                    </svg>
                  </span>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <table
      aria-label="device-list"
      class="MuiTable-root"
    >
      <thead
        class="MuiTableHead-root"
      >
        <tr
          class="MuiTableRow-root MuiTableRow-head"
        >
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Type
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Date
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trainer
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Trainer Badge Code
          </th>
          <th
            class="MuiTableCell-root MuiTableCell-head"
            scope="col"
          >
            Project
          </th>
        </tr>
      </thead>
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-538"
          data-testid="training-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Other training
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Relf Harold
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            NF 13 CF
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="Link-root-539"
              href="/projects/detail/8aa1c4c4-6521-47bb-27fd-af5ac02b2cd8"
              title="View Project detail"
            >
              Project Name 2
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="update-delete-cell"
          />
        </tr>
        <tr
          class="MuiTableRow-root WithStyles(ForwardRef(TableRow))-root-538"
          data-testid="training-list-row"
          style="cursor: pointer;"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Other training
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Joe Dawson
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            -
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            <a
              class="Link-root-539"
              href="/projects/detail/8aa1c4c4-6521-47bb-27fd-af5ac02b2cd8"
              title="View Project detail"
            >
              Project Name 2
            </a>
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
            data-testid="update-delete-cell"
          />
        </tr>
      </tbody>
    </table>
    <nav
      aria-label="pagination navigation"
      class="MuiPagination-root  makeStyles-pagination-540"
      data-testid="pagination"
    >
      <ul
        class="MuiPagination-ul"
      >
        <li>
          <button
            aria-label="Go to previous page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
              />
            </svg>
          </button>
        </li>
        <li>
          <button
            aria-current="true"
            aria-label="page 1"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-selected"
            tabindex="0"
            type="button"
          >
            1
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </li>
        <li>
          <button
            aria-label="Go to next page"
            class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiPaginationItem-icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
